...
            android:title="Home" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter"
            android:title="Filter" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="Search" />
    </group>
    <item android:title="Settings">
        <menu>
            <item
...
